compile_tests/expected/fns.stderr
error: unsupported parameter
 --> compile_tests/src/fns.rs:7:32
  |
7 |     fn func_with_invalid_param((a, b): (F32, F32)) {}
  |                                ^^^^^^